# MCP-project

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  README.md  check.sh  docker-compose.portainer.yml  install.ps1  install.sh  norway_climate_text.txt  package-lock.json  package.json  plan.md  playwright.config.ts
backend/: alembic_knowledge.ini  alembic_sessions.ini  pyproject.toml
backend/data/collection_status/: 3a23d7f0-3b49-438b-ae9e-ceba400ab525.json  9c8ae6f1-5b0c-4321-91bf-9f5981271349.json  d17cb7e1-64f1-4f3b-b46e-46149e4a3e2f.json
backend/data/outputs/: demo_processing_result.json  reasoning_log_53c1edc0-6d98-405e-b802-bc7a4fa8b40b.json  reasoning_log_f9d9b8e7-0d71-4069-b5a3-763007343dc8.json  reasoning_log_feb3542b-9818-4594-84e3-31eceb7ff5c9.json  research_log_53c1edc0-6d98-405e-b802-bc7a4fa8b40b.jsonl  research_log_f9d9b8e7-0d71-4069-b5a3-763007343dc8.jsonl  research_log_feb3542b-9818-4594-84e3-31eceb7ff5c9.jsonl  research_log_{session_id}.jsonl
backend/data/web_search/: 2fefd843-08ef-4581-84b1-2611e1206efa.json  b0e7e1c8-128c-4cd0-8814-df9335d72930.json
backend/knowledge_bank/: knowledge_registry.py  service.py
backend/knowledge_bank/geopolitical/: eu_china.md  eu_russia.md  eu_usa.md  norway_russia.md  usa_china.md  usa_russia.md
backend/knowledge_bank/sectors/: energy.md  telecommunications.md
backend/knowledge_bank/threat_actors/: chinese_state.md  russian_state.md
backend/scripts/: seed_knowledge.py  seed_perspective_docs.py
backend/scripts/perspective_docs/: china_national_defense_2019.md  china_national_security_2025.md  eu_rearm_europe_2025.md  eu_resourceeu_action_plan_2025.md  eu_strategic_compass_2yr_2024.md  eu_strategic_compass_progress_2025.md  norway_climate_strategy_2025.md  norway_nss_2025.md  norway_threat_assessment_2026.md  norway_total_preparedness_2025.md  russia_foreign_policy_concept_2023.md  russia_nss_2021.md  us_cyber_strategy_2026.md  us_economic_report_2026.md  us_ncsc_ci_strategy_2024.md  us_nds_2026.md  us_nss_2025.md  us_whostp_sci_tech_2026.md
backend/sessions/: 0cc478e9-647c-44c7-8401-8857125dab06.json  22f57178-1aca-4067-963b-afbaf085c57e.json  332d4508-99f7-44e8-aab9-7165921af67b.json  5fc7fb8c-d471-46e1-8e85-24cbc3d616a6.json  7f032bed-12c8-438f-9360-9d983151005e.json  8c52472a-c37c-40cb-a4ea-cc8925fea5ae.json  a3b5dede-d429-438f-adae-5fb3fecf3b7e.json  becc9ad8-6ae9-4e75-830f-b58f12636880.json  cadf0ade-7d36-45d5-a759-8fecbd51185f.json  e518558e-1f29-4590-adf5-615b94e14e14.json  f7395634-e900-45ba-b9e9-75f6a518551f.json  fddd9d0c-cf5d-4e82-a1b3-e72d8053eb1a.json  test-session-123.json
backend/src/: __init__.py  logging_config.py  runner.py
backend/src/api/: analysis.py  dev_chat.py  dialogue.py  main.py
backend/src/db/: __init__.py  engine.py  mappers.py  unit_of_work.py
backend/src/importers/: __init__.py  session_uploads.py  upload.py
backend/src/mcp_client/: __init__.py  client.py
backend/src/models/: __init__.py  analysis.py  confidence.py  dialogue.py  enums.py  extraction.py  indicators.py  processing.py  reasoning.py  reports.py
backend/src/prompts/: __init__.py  direction.py
backend/src/services/: __init__.py  agent_builder.py  agent_factory.py  ai_orchestrator.py  analysis_prototype_service.py  analysis_service.py  analysis_session_store.py  collection_service.py  collection_status.py  council_mcp_process.py  council_personas.py  council_service.py  dialogue_flow.py  dialogue_service.py  gemini_agent.py  gemini_deliberation_adapter.py  llm_config.py  llm_service.py  mcp_staging.py  misp_collector.py  openai_compatible_client.py  processing_prototype_service.py  processing_result_store.py  processing_service.py  reasearch_logger.py  reasoning_logger.py  review_service.py  tool_calling_agent.py
backend/tests/: __init__.py  conftest.py  test_uploads.py
backend/tests/api/: test_analysis.py  test_analysis_integration.py  test_dev_chat.py  test_dialogue.py  test_dialogue_response_conversion.py
backend/tests/db/: test_engine.py  test_repositories_unit.py
backend/tests/importers/: conftest.py  test_api_upload.py  test_session_uploads.py  test_uploads.py
backend/tests/knowledge_bank/: test_knowledge_service.py
backend/tests/mcp_client/: __init__.py  test_client.py  test_client_unit.py
backend/tests/models/: test_analysis.py  test_dialogue.py  test_enums.py  test_extraction.py  test_indicators.py  test_perspective.py  test_reasoning.py  test_reports.py
backend/tests/services/: conftest.py  test_agent_builder.py  test_ai_orchestrator.py  test_analysis_flow.py  test_analysis_prototype_service.py  test_analysis_session_store.py  test_collection_flow.py  test_collection_service.py  test_council_flow.py  test_council_mcp_process.py  test_council_personas.py  test_council_service.py  test_dialogue_flow_with_statemachine.py  test_dialogue_service.py  test_knowledge_injection.py  test_llm_config.py  test_mcp_staging.py  test_misp_collector.py  test_openai_compatible_client.py  test_otx_collector.py  test_processing_flow.py  test_processing_prototype_service.py  test_processing_result_store.py  test_reasoning_logger.py  test_review_service.py
council_mcp_server/: config.yaml  personas.py  pyproject.toml  requirements.txt  server.py  server_http.py
council_mcp_server/adapters/: __init__.py  gemini.py  openai.py  openrouter.py
council_mcp_server/deliberation/: engine.py  summarizer.py
council_mcp_server/models/: config.py  schema.py
council_mcp_server/src/: server.py
council_mcp_server/src/prompts/: __init__.py  personas.py
council_mcp_server/tests/unit/: test_config.py  test_engine.py  test_models.py  test_openai_adapter.py  test_server_response_limits.py
mcp_server/: pyproject.toml
mcp_server/src/: models.py  server.py
mcp_server/src/prompts/: __init__.py  _shared.py  analysis.py  collection.py  processing.py
mcp_server/src/resources/: __init__.py
mcp_server/src/tools/: google_search.py  (+5 more)
mcp_server/tests/: test_integration.py  test_parsing.py  test_search_local_data.py  test_search_misp.py  test_server.py  test_web_search.py  testfile_generate_pir.py
(+381 files in other folders)
