[project]
name = "council-mcp"
version = "0.1.0"
description = "Council MCP HTTP Server — multi-round AI deliberation engine"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.11,<4"
dependencies = [
    "fastmcp (>=2.0.0)",
    "mcp (>=1.0.0)",
    "pydantic (>=2.5.0)",
    "pyyaml (>=6.0.1)",
    "httpx (>=0.27.0)",
    "tenacity (>=8.2.0)",
    "scikit-learn (>=1.3.0)",
    "sentence-transformers (>=2.2.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
